[package]
name = "ripbk-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["cargo"] }
arboard = "3.2.0"
serde = "1.0.152"
serde_json = "1.0.91"
dirs = "4.0.0"
ripbk-lib = { version = "*", path = "../library" }
reqwest = { version = "0.11.13", features = ["blocking"] }
